<resources>
    <string name="app_name">Smart Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fill_upFields">Fill up all fields</string>
    <string name="address">address</string>
    <string name="phone_number">Phone number</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="notification">Notification</string>
    <string name="temperature">Temperature</string>
    <string name="services">Services</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration_is_done">"Registration is done!"</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="add_master">Add master</string>
    <string name="user_exists">User exists</string>
    <string name="register_failed">Registration fails</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="add">Add</string>
    <string name="add_service">Add service</string>
    <string name="title">Title</string>
    <string name="price_byn">Price (BYN)</string>
    <string name="description">Description</string>
    <string name="masters">Masters</string>
    <string name="master_id">Master ID</string>
    <string name="order_submitted">Order submitted</string>
    <string name="busy_times">Busy times</string>
    <string name="edit_masters">Edit masters</string>
    <string name="history">History</string>
    <string name="show">Show</string>
    <string name="error_loading_details">Error loading details</string>
    <string name="service_detials">Service detials</string>
    <string name="master">Master</string>
    <string name="order">Order</string>
    <string name="delete">Delete</string>
    <string name="date_and_time">Date and time</string>
    <string name="comment">Comment</string>
    <string name="increase_temperature">Increase temperature</string>
    <string name="humidity">Humidity</string>
    <string name="set">Set</string>
    <string name="refresh">Refresh</string>
    <string name="search">search</string>
    <string name="master_is_busy_at_this_time">Master is busy at this time</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="send_notification">Send Notification</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_message">Notification Message</string>
    <string name="notification_sent">Notification sent</string>
    <string name="failed">Failed</string>
    <string name="notifications">Notifications</string>
    <string name="priority">Priority</string>
    <string name="works">Works</string>
    <string name="order_details">Order details</string>
    <string name="buyer">Buyer</string>
    <string name="client_s_comment">Client\'s comment</string>
    <string name="master_s_comment">Master\'s comment</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
</resources>