<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/servicesFragment2"
        android:icon="@drawable/services_icon"
        android:title="@string/services" />

    <item
        android:id="@+id/editMasterFragment"
        android:icon="@drawable/master_icon"
        android:title="@string/edit_masters" />

    <item
        android:id="@+id/sendNotificationFragment"
        android:title="@string/notification"
        android:icon="@drawable/notifications_icon"/>

    <item
        android:id="@+id/orderHistoryFragment"
        android:icon="@drawable/history_icon"
        android:title="@string/history" />


    <item
        android:id="@+id/profileFragment2"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />

</menu>