<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_nav_graph"
    app:startDestination="@id/servicesFragment2">

    <fragment
        android:id="@+id/servicesFragment2"
        android:name="com.example.smarthomeapp.ui.shared.services.ServicesFragment"
        android:label="@string/services"
        tools:layout="@layout/fragment_services" >
        <action
            android:id="@+id/nav_services_add_service"
            app:destination="@id/addServiceFragment" />
    </fragment>
    <fragment
        android:id="@+id/editMasterFragment"
        android:name="com.example.smarthomeapp.ui.admin.edit_master.EditMasterFragment"
        android:label="@string/masters"
        tools:layout="@layout/fragment_edit_master" >
        <action
            android:id="@+id/nav_edit_masters_add"
            app:destination="@id/edit_master_add_master" />
    </fragment>
    <fragment
        android:id="@+id/orderHistoryFragment"
        android:name="com.example.smarthomeapp.ui.shared.order_history.OrderHistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_order_history" />
    <dialog
        android:id="@+id/edit_master_add_master"
        android:name="com.example.smarthomeapp.ui.admin.add_master.AddMasterFragment"
        android:label="@string/add_master"
        tools:layout="@layout/fragment_add_master" />
    <fragment
        android:id="@+id/addServiceFragment"
        android:name="com.example.smarthomeapp.ui.admin.add_service.AddServiceFragment"
        android:label="@string/add_service"
        tools:layout="@layout/fragment_add_service" />
    <fragment
        android:id="@+id/profileFragment2"
        android:name="com.example.smarthomeapp.ui.shared.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/nav_lang"
            app:destination="@id/languageFragment" />
    </fragment>
    <fragment
        android:id="@+id/sendNotificationFragment"
        android:name="com.example.smarthomeapp.ui.admin.send_notification.SendNotificationFragment"
        android:label="@string/send_notification"
        tools:layout="@layout/fragment_send_notification" />
    <fragment
        android:id="@+id/languageFragment"
        android:name="com.example.smarthomeapp.ui.shared.language.LanguageFragment"
        android:label="LanguageFragment" />
</navigation>