<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="18dp"
    tools:context=".ui.admin.add_master.AddMasterFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text = "@string/add_master"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/app_logo"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:importantForAccessibility="no" />


    <EditText
        android:id="@+id/etAddMasterFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/full_name"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etAddMasterPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etAddMasterEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/etAddMasterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnAddMaster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:text="@string/add"
        android:textColor="@color/white"/>

</LinearLayout>