<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.shared.auth.AuthActivity"
    android:padding="20dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:background="@drawable/app_logo"
        android:importantForAccessibility="no" />


    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/email"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/password"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/login"
        android:backgroundTint="@color/dark_orange"
        android:textSize="20sp"/>

</LinearLayout>