<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.shared.service_details.ServiceDetailsFragment">

    <TextView
        android:id="@+id/tvErrDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_gravity="center"
        android:text="@string/error_loading_details"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/llSerDet"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/app_logo"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_detials"
                android:fontFamily="cursive"
                android:textColor="@color/blue"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="64dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/title"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tvDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_byn"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/tvDetailsPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/master"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/tvDetailsRecMaster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/tvDetailsDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    tools:text="test"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/order"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"
                android:layout_marginTop="120dp"
                android:layout_gravity="center" />

        </LinearLayout>


    </ScrollView>
</FrameLayout>